--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,45 @@
-numpy<2.0.0
 pandas<2.0.0
-albumentations
-gitpython
-scikit-learn
-wandb
 matplotlib
+python-dotenv
+albumentations==1.3.0
+appdirs==1.4.4
+click==8.1.3
+coloredlogs==15.0.1
+cython==0.29.34
+docker-pycreds==0.4.0
+easydict==1.10
+flatbuffers==23.3.3
+gitdb==4.0.10
+gitpython==3.1.31
+humanfriendly==10.0
+imageio==2.28.0
+importlib-metadata==6.6.0
+insightface==0.7.3
+joblib==1.2.0
+mpmath==1.3.0
+networkx==2.6.3
+numpy==1.21.6
+onnx==1.13.1
+onnxruntime==1.14.1
+onnxruntime-gpu==1.14.1
+opencv-python==4.7.0.72
+pathtools==0.1.2
+pillow==9.5.0
+prettytable==3.7.0
+protobuf==3.20.3
+psutil==5.9.5
+pywavelets==1.3.0
+qudida==0.0.4
+scikit-image==0.19.3
+scikit-learn==1.0.2
+scipy==1.7.3
+sentry-sdk==1.21.0
+setproctitle==1.3.2
+smmap==5.0.0
+sympy==1.10.1
+threadpoolctl==3.1.0
+tifffile==2021.11.2
+tqdm==4.65.0
+wandb==0.15.0
+wcwidth==0.2.6
+zipp==3.15.0
