--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-pandas<2.0.0
-matplotlib
 python-dotenv
 albumentations==1.3.0
 appdirs==1.4.4
@@ -43,3 +41,50 @@ tqdm==4.65.0
 wandb==0.15.0
 wcwidth==0.2.6
 zipp==3.15.0
+bottleneck==1.3.5
+brotlipy==0.7.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.0.4
+cryptography==39.0.1
+cycler==0.11.0
+flit-core==3.6.0
+fonttools==4.25.0
+future==0.18.3
+idna==3.4
+kiwisolver==1.4.4
+matplotlib==2.2.2
+matplotlib-base==3.2.2
+mkl-service==2.4.0
+mkl_fft==1.3.1
+mkl_random==1.2.2
+munkres==1.1.4
+numexpr==2.8.4
+olefile==0.46
+packaging==22.0
+pandas==1.3.5
+pip==22.3.1
+ply==3.11
+pycparser==2.21
+pyopenssl==23.0.0
+pyparsing==3.0.9
+pyqt==5.15.7
+pyqt5-sip==12.11.0
+pysocks==1.7.1
+python==3.7.16
+python-dateutil==2.8.2
+pytorch==1.12.1
+pytz==2022.7
+pyyaml==6.0
+requests==2.28.1
+seaborn==0.12.2
+setuptools==65.6.3
+sip==6.6.2
+six==1.16.0
+toml==0.10.2
+torchvision==0.13.1
+tornado==6.2
+typing-extensions==4.4.0
+typing_extensions==4.4.0
+urllib3==1.26.14
+wheel==0.38.4
