--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-dotenv
+wheel==0.38.4
 albumentations==1.3.0
 appdirs==1.4.4
 click==8.1.3
@@ -53,10 +53,8 @@ fonttools==4.25.0
 future==0.18.3
 idna==3.4
 kiwisolver==1.4.4
-matplotlib==2.2.2
-matplotlib-base==3.2.2
+matplotlib==3.2.2
 mkl-service==2.4.0
-mkl_fft==1.3.1
 mkl_random==1.2.2
 munkres==1.1.4
 numexpr==2.8.4
@@ -68,12 +66,10 @@ ply==3.11
 pycparser==2.21
 pyopenssl==23.0.0
 pyparsing==3.0.9
-pyqt==5.15.7
 pyqt5-sip==12.11.0
 pysocks==1.7.1
-python==3.7.16
 python-dateutil==2.8.2
-pytorch==1.12.1
+torch==1.12.1
 pytz==2022.7
 pyyaml==6.0
 requests==2.28.1
@@ -85,6 +81,5 @@ toml==0.10.2
 torchvision==0.13.1
 tornado==6.2
 typing-extensions==4.4.0
-typing_extensions==4.4.0
 urllib3==1.26.14
-wheel==0.38.4
+python-dotenv
